--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Stefans Toolkit</title>
     <link rel="stylesheet" href="styles/global.css">
   </head>
   <h1>Stefan Toolkit</h1>
