Added colours to page

--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
     <title>Stefans Toolkit</title>
     <link rel="stylesheet" href="styles/global.css">
   </head>
-  <h1>Stefan Toolkit</h1>
+  <body class="container">
+    <h1>Stefans Toolkit</h1>
+    <section>
+      <div w3-include-html="components/colours.html"></div>
+    </section>
+    <script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <script>w3IncludeHTML();</script>
+  </body>
 </html>
