--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body class="container">
     <h1>Stefans Toolkit</h1>
-    <section>
+    <section class="margin-bottom-large">
       <div w3-include-html="components/colours.html"></div>
+    </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/spacing.html"></div>
     </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
