--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <section class="margin-bottom-large">
       <div w3-include-html="components/spacing.html"></div>
     </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/borders.html"></div>
+    </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
   </body>
