--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Stefans Toolkit</title>
+    <link href='https://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/global.css">
   </head>
   <body class="container">
-    <h1>Stefans Toolkit</h1>
+    <h1 class="heading-large">Stefans Toolkit</h1>
     <section class="margin-bottom-large">
       <div w3-include-html="components/colours.html"></div>
     </section>
@@ -14,6 +15,9 @@
     </section>
     <section class="margin-bottom-large">
       <div w3-include-html="components/borders.html"></div>
+    </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/typography.html"></div>
     </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
