--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stefans Toolkit</title>
+    <title>Stefans Blog Toolkit</title>
     <link href='https://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/global.css">
   </head>
   <body class="container">
-    <h1 class="heading-large">Stefans Toolkit</h1>
+    <h1 class="heading-large">Stefans Blog Toolkit</h1>
      <section class="margin-bottom-large">
       <div w3-include-html="components/typography.html"></div>
     </section>
@@ -15,6 +15,9 @@
     </section>
     <section class="margin-bottom-large">
       <div w3-include-html="components/spacing.html"></div>
+    </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/buttons.html"></div>
     </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
