Added a basic grid

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <section class="margin-bottom-large">
       <div w3-include-html="components/buttons.html"></div>
     </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/grid.html"></div>
+    </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
   </body>
