Added base tile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="container">
     <h1 class="heading-large">Stefans Blog Toolkit</h1>
-     <section class="margin-bottom-large">
+    <section class="margin-bottom-large">
       <div w3-include-html="components/typography.html"></div>
     </section>
     <section class="margin-bottom-large">
@@ -21,6 +21,9 @@
     </section>
     <section class="margin-bottom-large">
       <div w3-include-html="components/grid.html"></div>
+    </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/article-tiles.html"></div>
     </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
