Added from styles and made the toolkit mobile friendly

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stefans Blog Toolkit</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/global.css">
   </head>
@@ -21,6 +22,9 @@
     </section>
     <section class="margin-bottom-large">
       <div w3-include-html="components/grid.html"></div>
+    </section>
+    <section class="margin-bottom-large">
+      <div w3-include-html="components/forms.html"></div>
     </section>
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
     <script>w3IncludeHTML();</script>
