--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/global.css">
   </head>
   <body class="container">
-    <h1 class="heading-large">Stefans Blog Toolkit</h1>
+    <h1 class="heading-large">Stefans Toolkit</h1>
     <section class="margin-bottom-large">
       <div w3-include-html="components/typography.html"></div>
     </section>
